data/derived/sp14/progs/unify/prog1655.ml.out
Characters 193-197:
  | 3 -> buildAverage (next next)
                       ^^^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
